# task2

./: text
hash_table_test/: CMakeLists.txt  main.c
hash_table_test2/: CMakeLists.txt  main.c  str.c  str.h
tf_idf_metric/: CMakeLists.txt
tf_idf_metric/inc/: str.h  str_map.h  tf_idf_metric.h  word_tf_wector.h
tf_idf_metric/src/: main.c  str.c  str_map.c  tf_idf_metric.c  word_tf_wector.c
tf_idf_metric_nonthread/: CMakeLists.txt
tf_idf_metric_nonthread/inc/: file_metric.h  str.h  str_mab.h  str_map.h  tf_idf_data.h  tf_idf_priority_queue.h  user_info_macro.h  vec.h
tf_idf_metric_nonthread/src/: file_metric.c  main.c  str.c  str_map.c  tf_idf_priority_queue.c  vec.c
